Bug 1383879 - Always position the nav-bar when the TabsToolbar is not collapsed since the positioning of the animations is dependent on the container having position:relative. r=Gijs
We don't need to position the nav-bar if the TabsToolbar is collapsed since the buttons that we would animate (such as stop/reload) are display:none when the TabsToolbar is hidden.

MozReview-Commit-ID: EUkHz3erxM

UltraBlame original commit: 193272c140838e24c7f04017b45b0b7c6201cfad

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -273,6 +273,12 @@ toolbar:-moz-lwtheme {
   }
 }
 
+#TabsToolbar:not([collapsed="true"]) + #nav-bar {
+  
+
+  position: relative;
+}
+
 #PersonalToolbar {
   padding: 0 4px 4px;
 }
